Fix image size on tablet and mobile views

--- a/src/styles/projects.module.scss
+++ b/src/styles/projects.module.scss
@@ -47,7 +47,7 @@
   &_image {
     width: 100%;
     border-radius: .5rem;
-    filter: brightness(0.5) saturate(1) contrast(1.2);
+    filter: brightness(0.7) saturate(1) contrast(1.2);
     transition: .3s;
     scale: 1;
 
@@ -269,6 +269,10 @@
     }
 
     &_image {
+      transform: translateY(-1rem);
+      filter: none;
+      transition: .3s;
+
       &_container {
         width: 35%;
         align-items: center;
@@ -292,6 +296,7 @@
 
     &_image {
       width: calc(100% - 3rem);
+      transform: translateY(0rem);
 
       &_container {
         width: 100%;
